deploy/base/data-ingestor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-ingestor
spec:
  type: ClusterIP
  selector:
    app: data-ingestor
  ports:
    - name: http
      port: 8080
      targetPort: http
