deploy/base/data-ingestor/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: data-ingestor
spec:
  podSelector:
    matchLabels:
      app: data-ingestor
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              ingestor-query-client: "true"
      ports:
        - protocol: TCP
          port: 8080
    - from:
        - namespaceSelector:
            matchLabels: {kubernetes.io/metadata.name: crawl-monitoring}
          podSelector:
            matchLabels: {app: infra-exporter}
      ports:
        - {protocol: TCP, port: 8080}
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - podSelector:
            matchLabels: {app: postgresql-entry}
      ports:
        - protocol: TCP
          port: 6432
    - to:
        - ipBlock:
            cidr: 10.4.4.2/32
        - ipBlock:
            cidr: 10.4.4.8/32
        - ipBlock:
            cidr: 10.4.4.5/32
      ports:
        - protocol: TCP
          port: 9092
